test/Fail/Issue5034-4.agda
postulate
  _ : @tick Set → Set
